-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta1
-
None
-
Ubuntu 22.04
-
-
01b7e2d09 (dev), 5a992b2f5 (6.6)
Steps to reproduce:
- Open example: https://doc.qt.io/qt-6/qtdoc-demos-documentviewer-example.html from Qt 6.6.0 b1.
- Build and run the app on Linux desktop.
- Open any txt file.
- Open the same file again or use recent documents icon to open it.
- Observe edit menu and edit buttons in toolbar.
Expected: File content is present. No changes to edit menu and toolbar.
Actual: When reopening the file multiple times - Edit menu and some buttons get multiplied in the header.
Reproducibility: 100%
NOTES: Not reproducible with the example from Qt 6.5.1.
- clones
-
QTBUG-114614 [DocumentViewer] Content of PDF file could not be viewed on Linux
-
- Closed
-
- is cloned by
-
QTBUG-114617 [DocumentViewer] Document specific handlers remain on the screen when changing document type
-
- Closed
-
- relates to
-
QTQAINFRA-5592
Qt Test Attack - Q2, 2023
-
- Open
-
| For Gerrit Dashboard: QTBUG-114615 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 485799,8 | DocumentViewer demo: Make plugins re-usable | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
| 486380,3 | DocumentViewer demo: Make plugins re-usable | 6.6 | qt/qtdoc | Status: MERGED | +2 | 0 |