examples/demos/documentviewer/app/mainwindow.h
@@ -39,6 +39,7 @@ private:
     void readSettings();
     void saveSettings() const;
     void restoreViewerSettings();
+    void resetViewer() const;
     void saveViewerSettings() const;
 
     QDir m_currentDir;
